--- a/Linezolid.html
+++ b/Linezolid.html
@@ -1,32 +1,212 @@
 <h>Linezolid</h>
-Cập nhật: Tháng 1/2025
-
+<p>Cập nhật: Tháng 1/2025</p>
 <h1>1. Phân loại dược lý</h1>
 <p>Kháng sinh nhóm oxazolidinon</p>
 
 <h1>2.1. Liều thông thường trẻ sơ sinh</h1>
-<h2>Liều chung</h2>
-<p><ul>
-<li>Tuổi thai < 34 tuần:
-<ul>
-<li>Tuổi sau sinh ≤ 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h</li>
-<li>Tuổi sau sinh > 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</li>
-</ul></li>
-<li>Tuổi thai ≥ 34 tuần: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</li>
-<li>Tuổi thai < 34 tuần:
-<ul>
-<li>Tuổi sau sinh ≤ 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h</li>
-<li>Tuổi sau sinh > 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</li>
-<li>Tuổi thai ≥ 34 tuần: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</li>
-</ul></li></ul></p>
-<h2>Viêm phổi bệnh viện</h2>
-<p>Uống/tiêm, truyền tĩnh mạch: 10 mg/kg/lần q8h, trong 10 - 14 ngày
-</ul></p>
-<h2>Viêm phổi cộng đồng, gồm cả những trường hợp có nhiễm khuẩn huyết</h2>
+<h2>Liều chung:</h2>
+<p>Tuổi thai < 34 tuần:</p>
+<p>Tuổi sau sinh ≤ 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h</p>
+<p>Tuổi sau sinh > 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</p>
+<p>Tuổi thai ≥ 34 tuần: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</p>
+<p>Tuổi thai < 34 tuần:</p>
+<p>Tuổi sau sinh ≤ 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h</p>
+<p>Tuổi sau sinh > 7 ngày: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</p>
+<p>Tuổi thai ≥ 34 tuần: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h</p>
+
+<h2>Viêm phổi bệnh viện:</h2>
 <p>Uống/tiêm, truyền tĩnh mạch: 10 mg/kg/lần q8h, trong 10 - 14 ngày</p>
-<h2>Nhiễm khuẩn da và cấu trúc da có biến chứng</h2>
+
+<h2>Viêm phổi cộng đồng, gồm cả những trường hợp có nhiễm khuẩn huyết:</h2>
 <p>Uống/tiêm, truyền tĩnh mạch: 10 mg/kg/lần q8h, trong 10 - 14 ngày</p>
-<h2>Nhiễm khuẩn da và cấu trúc da không có biến chứng</h2>
+
+<h2>Nhiễm khuẩn da và cấu trúc da có biến chứng:</h2>
+<p>Uống/tiêm, truyền tĩnh mạch: 10 mg/kg/lần q8h, trong 10 - 14 ngày</p>
+
+<h2>Nhiễm khuẩn da và cấu trúc da không có biến chứng:</h2>
 <p>Uống 10 mg/kg/lần q8h, trong 10 - 14 ngày</p>
-<h2>Nhiễm khuẩn do Enterococcus faecium đã kháng vancomycin, gồm cả những trường hợp có nhiễm khuẩn huyết</h2>
+
+<h2>Nhiễm khuẩn do Enterococcus faecium đã kháng vancomycin, gồm cả những trường hợp có nhiễm khuẩn huyết:</h2>
 <p>Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 14 - 28 ngày</p>
+
+<h1>2.2. Liều thông thường trẻ em</h1>
+<h2>Liều chung:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h</p>
+
+<h2>Viêm phổi bệnh viện</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 10 - 14 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 10 - 14 ngày</p>
+ 
+<h2>Viêm phổi cộng đồng, gồm cả những trường hợp có nhiễm khuẩn huyết:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 10 - 14 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 10 - 14 ngày</p>
+
+<h2>Nhiễm khuẩn da và cấu trúc da có biến chứng:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 10 - 14 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 10 - 14 ngày</p>
+
+<h2>Nhiễm khuẩn da và cấu trúc da không có biến chứng:</h2>
+<p>Trẻ em < 5 tuổi: Uống 10 mg/kg/lần q8h, trong 10 - 14 ngày</p>
+<p>Trẻ em 5 - 11 tuổi: Uống 10 mg/kg/lần q12h, trong 10 - 14 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống 600 mg/lần q12h, trong 10 - 14 ngày</p>
+
+<h2>Nhiễm khuẩn do Enterococcus faecium đã kháng vancomycin, gồm cả những trường hợp có nhiễm khuẩn huyết:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 14 - 28 ngày</p>
+
+<h2>Nhiễm khuẩn huyết, viêm nội tâm mạc nhiễm khuẩn, nhiễm khuẩn do vi khuẩn gram dương đã kháng thuốc  (Enterococcus faecium kháng vancomycin, Staphylococcus aureus kháng methicillin):</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 14 - 28 ngày</p>
+
+<h2>Viêm phúc mạc (thẩm phân phúc mạc):</h2>
+<p>Trẻ em < 5 tuổi: Uống 10 mg/kg/lần q8h, trong 14 - 21 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em 5 - 11 tuổi: Uống 10 mg/kg/lần q12h, trong 14 - 21 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống 600 mg/lần q12h, trong 14 - 21 ngày</p>
+
+<h2>Nhiễm trùng liên quan đến ống thông trong thẩm phân phúc mạc:</h2>
+<p>Trẻ em < 5 tuổi: Uống 10 mg/kg/lần q8h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em 5 - 11 tuổi: Uống 10 mg/kg/lần q12h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống 600 mg/lần q12h, trong 14 - 28 ngày</p>
+
+<h2>Viêm màng não, gồm cả những trường hợp liên quan đến chăm sóc y tế:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 10 - 14 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h, trong 10 - 14 ngày</p>
+
+<h2>Nhiễm khuẩn xương khớp:</h2>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h, trong 14 - 28 ngày. Liều tối đa: 600 mg/lần</p>
+
+<h2>Bệnh lao kháng thuốc:</h2>
+<p>Trẻ em < 12 tuổi:</p>
+<p>Cân nặng từ 5 - 10 kg: Uống/tiêm, truyền tĩnh mạch 15 mg/kg/lần q24h</p>
+<p>Cân nặng từ 10 - 23 kg: Uống/tiêm, truyền tĩnh mạch 12 mg/kg/lần q24h</p>
+<p>Cân nặng > 23 kg: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q24h. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q24h. Liều tối đa: 600 mg/lần</p>
+
+<h2>Nhiễm khuẩn do vi khuẩn Mycobacteria không phải lao:</h2>
+<p>Bệnh nhân có tình trạng xơ nang:</p>
+<p>Trẻ em < 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q8h. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em ≥ 12 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h hoặc q24h. Liều tối đa: 600 mg/lần</p>
+<p>Bệnh nhân không có tình trạng xơ nang:</p>
+<p>Trẻ em < 10 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q12h. Liều tối đa: 300 mg/lần</p>
+<p>Trẻ em ≥ 10 tuổi: Uống/tiêm, truyền tĩnh mạch 10 mg/kg/lần q24h. Liều tối đa: 600 mg/lần</p>
+<p>Trẻ em > 12 tuổi: Uống/tiêm, truyền tĩnh mạch 600 mg/lần q12h hoặc q24h</p>
+
+<h1>2.3. Hiệu chỉnh liều theo chức năng thận</h1>
+<p>Suy thận: không cần hiệu chỉnh liều</p>
+<p>Lọc máu ngắt quãng: dùng liều thông thường sau khi kết thúc lọc máu</p>
+<p>Thẩm phân phúc mạc: không có khuyến cáo hiệu chỉnh liều trên trẻ em. Tuy nhiên, trên người lớn: không cần hiệu chỉnh liều</p>
+<p>Lọc máu liên tục: không có khuyến cáo hiệu chỉnh liều trên trẻ em. Tuy nhiên, trên người lớn: không cần hiệu chỉnh liều</p>
+
+<h1>2.4. Hiệu chỉnh liều theo chức năng gan</h1>
+<p>Suy gan nhẹ và vừa (Child Pugh A hoặc B): không cần hiệu chỉnh liều</p>
+<p>Suy gan nặng: không có khuyến cáo hiệu chỉnh liều. Thận trọng khi dùng liều thông thường</p>
+
+<h1>3. Chống chỉ định</h1>
+<p>Bệnh nhân có tiền sử dị ứng với Linezolid</p>
+<p>Bệnh nhân đang sử dụng, hoặc đã sử dụng trong vòng 2 tuần trước đó một trong các thuốc ức chế monoamin oxidase (MAO) như isocarboxamid, phenelzin, selegilin, tranylcypromin</p>
+
+<h1>4. Tác dụng không mong muốn điển hình và thận trọng</h1>
+<h2>Nhiễm trùng Clostridioides difficile:</h2>
+<p>Biểu hiện: tiêu chảy do viêm đại tràng giả mạc và tiêu chảy liên quan đến Clostridioides difficile</p>
+<p>Thời gian khởi phát: Khác nhau; có thể khởi phát vào ngày đầu điều trị hoặc ≤ 3 tháng sau khi dùng linezolid</p>
+<p>Yếu tố nguy cơ:</p>
+<p>Phơi nhiễm với kháng sinh</p>
+<p>Thời gian nằm viện kéo dài</p>
+<p>Suy giảm miễn dịch</p>
+<p>Bệnh lý nền nghiêm trọng</p>
+<p>Phẫu thuật đường tiêu hoá</p>
+<p>Sử dụng các thuốc chống loét dạ dày - tá tràng (PPI, chẹn H2)</p>
+<p>Hoá trị</p>
+<p>Xử trí: Không có thông tin</p>
+
+<h2>Nhiễm toan lactic:</h2>
+<p>Biểu hiện: Bệnh nhân bị buồn nôn và nôn tái phát. Nhiễm toan không rõ nguyên nhân, nồng độ bicarbonat trong máu thấp, nồng độ lactat đạt đỉnh dao động từ 3 - 38 mmol/L. Nhiễm toan lactic có thể hồi phục trong vòng 15 ngày sau khi ngừng linezolid; tuy nhiên, một số trường hợp có thể mất nhiều thời gian hơn để xử trí hoặc dẫn đến tử vong</p>
+<p>Thời gian khởi phát: Khác nhau; có thể khởi phát vào ngày đầu điều trị hoặc ≤ 109 ngày sau khi dùng linezolid</p>
+<p>Yếu tố nguy cơ:</p>
+<p>Sử dụng linezolid kéo dài (≥28 ngày)</p>
+<p>Nồng độ đáy của thuốc > 2 mg/L khi dùng trong thời gian dài</p>
+<p>Xử trí: Ngừng điều trị linezolid</p>
+
+<h2>Ức chế tủy xương:</h2>
+<p>Biểu hiện: thiếu máu, thiếu máu bất sản, giảm bạch cầu, giảm tiểu cầu. Có thể hồi phục khi ngừng điều trị và thường mất 1 - 2 tuần để phục hồi</p>
+<p>Thời gian khởi phát: Thường xảy ra sau ≥ 14 ngày dùng linezolid</p>
+<p>Yếu tố nguy cơ:</p>
+<p>Sử dụng linezolid kéo dài (≥ 28 ngày)</p>
+<p>Số lượng tiểu cầu ban đầu ≤ 200 x 109/L</p>
+<p>Liều dùng hàng ngày cao hơn liều khuyến cáo</p>
+<p>Nồng độ đáy của thuốc > 2 mg/L khi dùng trong thời gian dài</p>
+<p>Bệnh nhân có sẵn tình trạng ức chế tuỷ xương</p>
+<p>Suy thận nặng hoặc suy gan từ trung bình đến nặng</p>
+<p>Sử dụng đồng thời các thuốc gây ức chế tuỷ xương</p>
+<p>Bệnh nhân có nhiễm trùng mạn tính (có dùng phối hợp hoặc sử dụng kháng sinh khác trước đó)</p>
+<p>Xử trí: Ngừng điều trị linezolid</p>
+			
+<h2>Bệnh lý về thần kinh ngoại biên và thị giác</h2>
+<p>Biểu hiện: Các triệu chứng bao gồm đau, tê bì chân tay, cảm giác yếu, giảm thị lực, khả năng nhận biết màu sắc và độ nhạy cảm với ánh sáng. Bệnh thần kinh thị giác có thể cải thiện hoặc hồi phục hoàn toàn khi ngừng điều trị; tuy nhiên, bệnh thần kinh ngoại biên có thể không phục hồi hoàn toàn khi ngừng điều trị</p>
+<p>Thời gian khởi phát: thường xảy ra sau ≥ 28 ngày điều trị</p>
+<p>Yếu tố nguy cơ:</p>
+<p>Sử dụng linezolid kéo dài (≥ 28 ngày)</p>
+<p>Nồng độ đáy của thuốc > 2 mg/L khi dùng trong thời gian dài</p>
+<p>Xử trí: Ngừng điều trị linezolid</p>
+		
+
+<h2>Hội chứng serotonin</h2>
+<p>Biểu hiện: kích động, lú lẫn, ảo giác, tăng phản xạ, rung giật cơ, run rẩy, nhịp tim nhanh. Thường có thể hồi phục trong vòng 48 giờ sau khi ngừng dùng linezolid và/hoặc các thuốc tác động lên hệ serotonergic; tuy nhiên, một số trường hợp được báo cáo đã dẫn đến tử vong</p>
+<p>Thời gian khởi phát: từ 1 - 20 ngày, trung bình là 4 ngày sau điều trị linezolid</p>
+<p>Yếu tố nguy cơ:</p>
+<p>Sử dụng đồng thời với các thuốc tác động lên hệ serotonergic (ví dụ, chất ức chế tái hấp thu serotonin có chọn lọc và chất ức chế tái hấp thu serotonin norepinephrine)</p>
+<p>Sử dụng đồng thời với các thuốc làm giảm chuyển hóa linezolid</p>
+<p>Hội chứng carcinoid</p>
+<p>Xử trí: Ngừng điều trị linezolid</p>
+
+<h1>5. Cách dùng</h1>
+<h2>Uống</h2>
+<p>Dạng bào chế: Viên nén bao phim 600mg</p>
+<p>Điều kiện bảo quản: Nhiệt độ phòng 15 - 25 độ C. Tránh ẩm và tránh ánh sáng</p>
+<p>Dạng bào chế: Bột pha hỗn dịch uống 100mg/5ml</p>
+<p>Điều kiện bảo quản: Nhiệt độ phòng 15 - 25 độ C. Tránh ẩm và tránh ánh sáng</p>
+<p>Bảo quản dung dịch sau hoàn nguyên: 21 ngày ở nhiệt độ phòng 15 - 25 độ C. Tránh ánh sáng</p>
+
+<h2>Tiêm, truyền tĩnh mạch</h2>
+<p>Dạng bào chế: Dung dịch tiêm truyền 600 mg/300mL</p>
+<p>Điều kiện bảo quản: Nhiệt độ 2 - 30 độ C</p>
+<p>Nồng độ khuyến cáo thông thường: ≤ 2 mg/mL</p>
+<p>Bảo quản sau khi xé bao bì: không có thông tin</p>
+<p>Hoàn nguyên: không áp dụng</p>
+<p>Pha loãng: không áp dụng</p>
+<p>Thời gian truyền: 30 - 120 phút</p>
+
+<h1>6. Tương tác thuốc</h1>
+<h2>Tương tác chống chỉ định</h2>
+<p>Amitriptylin, bupropion, carbamazepin, citalopram, clomipramin, dextromethophan, doxylamin, duloxetin, escitalopram, fentanyl, fluoxetin, fluvoxamin, paroxetin, sertralin, venlafaxin, milnacipran, trazodon, methylphenidat, mirtazapin, xanh methylen tiêm TM, sumatriptan, pethidin, tramadol, methadon: hiệp đồng tác dụng serotonin, dẫn đến tăng nguy cơ hội chứng serotonin</p>
+<p>Levodopa/carbidopa +/- entacapon, pseudoephedrin, phenylephrin, methyldopa: tăng tích luỹ noradrenalin và dopamin, dẫn đến tăng nguy cơ xuất hiện cơn tăng huyết áp (đau đầu, đánh trống ngực, cứng cổ)</p>
+<p>Nefopam: ức chế thu hồi adrenalin và serotonin trên hệ thần kinh, dẫn đến tăng nguy cơ kích thích thần kinh trung ương.</p>
+
+<h2>Tương tác khác</h2>
+<p>Thuốc làm tăng độc tính của linezolid: Thuốc ức chế monoamin oxiadase (MAO): isocarboxazid, phenelzin, selegilin, tranylcypromin. Vì vậy không sử dụng linezolid trên những bệnh nhân đang hoặc đã sử dụng trong vòng 2 tuần trước đó một trong các thuốc này</p>
+<p>Thuốc làm giảm tác dụng của linezolid: Thuốc gây cảm ứng qua enzym gan: rifampicin, carbamazepin, phenytoin, phenobarbital</p>
+<p>Thuốc có nguy cơ tăng độc tính của linezolid: Thuốc hạ đường huyết: acarbose, clorpropamid, glimepirid, glipizid, glyburid, metformin, nateglinid, repaglinid, tolazamid, tolbutamid</p>
+
+<h1>7. Quá liều</h1>
+<p>Triệu chứng: Chưa ghi nhận trường hợp quá liều trên người. Dấu hiệu quá liều trên chuột khi dùng linezolid 3000 mg/kg/ngày là giảm hoạt động, mất điều hòa, còn trên chó khi dùng 2000 mg/kg/ ngày là nôn và run</p>
+<p>Xử trí: Không có thuốc giải độc đặc hiệu. Lọc máu có thể giúp loại nhanh linezolid ra khỏi cơ thể. Khoảng 30% lượng thuốc có thể được loại bỏ trong vòng 3 giờ lọc máu</p>
+
+<h1>8. Theo dõi điều trị</h1>
+<h2>Lâm sàng:</h2>
+<p>Đánh giá triệu chứng trên thần kinh hoặc thị giác</p>
+<p>Theo dõi dấu hiệu và triệu chứng của nhiễm toan lactic: buồn nôn và nôn tái phát</p>
+<p>Theo dõi các dấu hiệu và triệu chứng của hội chứng serotonin</p>
+<p>Theo dõi tình trạng tiêu chảy</p>
+
+<h2>Cận lâm sàng:</h2>
+<p>Xét nghiệm công thức máu hàng tuần: đặc biệt trên những bệnh nhân được điều trị linezolid kéo dài > 2 tuần; sử dụng đồng thời thuốc gây ức chế tuỷ xương; bệnh nhân có nguy cơ chảy máu cao; bệnh nhân có tiền sử suy tuỷ xương; bệnh nhân có nhiễm trùng mạn tính đã được điều trị kháng sinh trước đó hoặc được điều trị phối hợp</p>
+<p>Xét nghiệm chức năng gan hàng tuần: trên những bệnh nhân được điều trị linezolid kéo dài</p>
+<p>Định lượng nồng độ Na thường quy: trên những bệnh nhân có nguy cơ hạ Na máu (dùng thuốc lợi tiểu, SIADH)</p>
+<p>Định lượng nồng độ Bicarbonat định kỳ: trên những bệnh nhân được điều trị linezolid kéo dài</p>
+<p>Chỉ số lactat: trên những bệnh nhân suy thận hoặc suy gan được điều trị linezolid kéo dài</p>
+
+<h1>9. Bảo hiểm y tế thanh toán</h1>
+<p>Tiêm: 100%</p>
+<p>Uống: 100%</p>
